<resources>
    <string name="app_name">WalkRunTracker</string>
    <string name="start_track">Start Tracking</string>
    <string name="stop_track">Stop Tracking</string>
    <string name="speed">Your speed is</string>
    <string name="total_distance">Your total distance is</string>
    <string name="average_speed">Your average speed is</string>
    <string name="time_elapsed">Time elapsed</string>
    <string name="status">Status</string>
    <string name="show_stats">Stats</string>
    <string name="back">Back</string>
    <string name="kmh_unit">%d km/h</string>
    <string name="km_unit">%s km</string>
    <string name="second_unit">%d seconds</string>
</resources>
