<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"/>
        <TextView
            android:id="@+id/speed_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_distance"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"/>
        <TextView
            android:id="@+id/distance_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/average_speed"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"/>
        <TextView
            android:id="@+id/average_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_elapsed"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"/>

        <Chronometer
            android:id="@+id/chrono"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"/>

    </GridLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/status_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Not recording"
            android:textAlignment="center"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/stat_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/show_stats"
            android:enabled="false"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/start_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_track"/>

            <Button
                android:id="@+id/stop_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stop_track"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
