<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.example.roman.walkruntracker.StatView
            android:id="@+id/custom"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_distance"
                android:layout_column="0"
                android:layout_row="1"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:id="@+id/stat_distance_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average_speed"
                android:layout_column="0"
                android:layout_row="2"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:id="@+id/stat_average_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="2"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_elapsed"
                android:layout_column="0"
                android:layout_row="3"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:id="@+id/stat_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="3"
                android:layout_gravity="center_horizontal"
                />

        </GridLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
        <Button
            android:id="@+id/back_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>
